# p3signals

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/include/: p3delegate.hpp  p3signals.hpp
tests/: CMakeLists.txt  main.cpp  make_delegate_test.hpp  make_slot_test.hpp  signals_test.hpp
